# SoftwareArchitectureCourse

./: .gitignore  3_dis_map.cpp  4_no_lock.cpp  4_opt_lock.cpp  4_pes_lock.cpp  5_bound_queue_consumer.cpp  5_bound_queue_producer.cpp  CMakeLists.txt  config.cfg
Facade/: CMakeLists.txt  config.cfg  main.cpp
Facade/FacadeController/: facade_controller.cpp  facade_controller.h
Facade/FacadeModel/: facade_model.cpp  facade_model.h
Facade/FacadeService/: facade_service.cpp  facade_service.h
Facade/options_parser/: options_parser.cpp  options_parser.h
FacadeService/: CMakeLists.txt  config.cfg
FacadeService/include/: message.h  options_parser.h  server.h
FacadeService/src/: main.cpp  options_parser.cpp  server.cpp
Logging/: CMakeLists.txt  config.cfg  main.cpp
Logging/LoggingController/: logging_controller.cpp  logging_controller.h
Logging/LoggingModel/: logging_model.cpp  logging_model.h
Logging/LoggingPersistence/: logging_persistence.cpp  logging_persistence.h
Logging/LoggingService/: logging_service.cpp  logging_service.h
Logging/options_parser/: options_parser.cpp  options_parser.h
LoggingService/: CMakeLists.txt
LoggingService/include/: options_parser.h  server.h
LoggingService/src/: main.cpp  server.cpp
Message/: message_controller.py  message_model.py  message_persistence.py
MessageService/: message_service.py
